--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^8",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "slice-machine-ui": "^1.25.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
